Data/Logs/log-2020-10-01.txt


=============================================================
Время: 2020-10-01 21:03:40.301118

Ошибка:
Traceback (most recent call last):
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 607, in _load_from_module_spec
    spec.loader.exec_module(lib)
  File "<frozen importlib._bootstrap_external>", line 779, in exec_module
  File "<frozen importlib._bootstrap_external>", line 916, in get_code
  File "<frozen importlib._bootstrap_external>", line 846, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "e:\PyProg\ProstoTools\Cogs\moderate.py", line 940
    @commands.command(aliases=['remwarn', 'rem-warn'], brief = 'True', name = 'remove-warn', aliases = ['rem-warn'], description = '**Снимает указаное предупреждения в участика**', usage = 'remove-warn [@Участник] [Id предупреждения]')
                                                                                             ^
SyntaxError: keyword argument repeated

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "e:/PyProg/ProstoTools/bot.py", line 63, in <module>
    client.load_extension(f'Cogs.{filename[:-3]}')
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 664, in load_extension
    self._load_from_module_spec(spec, name)
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 610, in _load_from_module_spec
    raise errors.ExtensionFailed(key, e) from e
discord.ext.commands.errors.ExtensionFailed: Extension 'Cogs.moderate' raised an error: SyntaxError: keyword argument repeated (moderate.py, line 940)

=============================================================